# faenta-etiquetas

./: Cargo.toml  README.md  build.rs  index.html  manifest.rc
assets/: sw.js
sql/: deploy_AuxiliarFaena.sql
src/: app.rs  config.rs  constants.rs  lib.rs  main.rs  sql.rs
src/app/: toggle_switch.rs
