[package]
name = "faena_etiquetas"
version = "0.1.0"
authors = ["Agustin Marco <agustin.marco@runfo.com.ar>"]
edition = "2021"
build = "build.rs"


[dependencies]
egui = "0.28"
egui-modal = "0.4"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

tiberius = { version = "0.12", features = ["sql-browser-async-std"] }
async-std = { version = "1", features = ["attributes"] }
anyhow = "1"
time = { version = "0.3", features = ["macros"] }
confy = { version = "0.6", features = ["toml_conf"] }
serde = { version = "1.0", features = ["derive"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[build-dependencies]
embed-resource = "2.4"


[profile.release]
opt-level = 2 # fast and small wasm


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
